2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	[BZ #14498]
	* NEWS: Fixed.
	* nss/nss_db/db-XXX.c (_nss_db_get##name##_r): Update hidx
	after parsing line but before break_if_match.
	* nss/nss_files/files-service (DB_LOOKUP): Don't "continue;"
	if there is a protocol mismatch.

2014-11-21  Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>

	* manual/sysinfo.texi (addmntent): It is actually MT-Safe,
	because the potential race is on the user-supplied stream.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	* sysdeps/posix/ctermid.c (ctermid): Return a pointer to a
	string literal if not passed a buffer.
	* manual/job.texi (ctermid): Update reasoning, note deviation
	from posix, suggest mtasurace when not passed a buffer, for
	future non-preliminary safety notes.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	* manual/users.texi (cuserid): Fix MT-Safety note for the case
	of not passing it a buffer.
	Reported by Peng Haitao.

2014-11-21  Alexandre Oliva <aoliva@redhat.com>

	* manual/Makefile ($(objpfx)stamp-summary): Require
	check-safety.sh to pass.
	* manual/check-safety.sh: Wish for verification that every
	@deftypefn and @deftypefun is followed by a @safety remark.

2014-11-20  Roland McGrath  <roland@hack.frob.com>

	* nptl/unwind.c (unwind_cleanup): Use __libc_fatal.

	* nptl/pthread_setcanceltype.c [!SIGCANCEL]: Return ENOTSUP early for
	PTHREAD_CANCEL_ASYNCHRONOUS.
	* nptl/pthread_cancel.c [!SIGCANCEL]: Just abort rather than trying to
	send SIGCANCEL.

	* nptl/default-sched.h: New file.
	* sysdeps/unix/sysv/linux/default-sched.h: New file.
	* nptl/pthread_create.c: Include it.
	(__pthread_create_2_1): Use collect_default_sched instead of making
	Linux syscalls here directly.

2014-11-20  Torvald Riegel  <triegel@redhat.com>

	* nptl/pthread_once.c (clear_once_control, __pthread_once_slow,
	__pthread_once): Use C11 atomics.

2014-11-20  Torvald Riegel  <triegel@redhat.com>

	* csu/tst-atomic.c (do_test): Add tests for C11-like atomics.
